framer-motion & z-index fixed

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,25 @@ body {
 }
 .ingredients {
   position: absolute;
+  margin-top: -100px;
+}
+.cheese {
+  width: 100%;
+  position: absolute;
+}
+.z1 {
+  z-index: 1;
+}
+
+.z2 {
+  z-index: 2;
+}
+
+.z3 {
+  z-index: 3;
+}
+.z4 {
+  z-index: 4;
 }
 
 /* The container */
